# BradypOS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  debug.gdb  default.ld  elf.c  launch_debug_server.sh  main.c  pico_ram.ld  rom_app.ld  start.s  vector.c
.github/docker/builder-arm-none-eabi/: Dockerfile
.github/workflows/: build-arm-none-eabi.yaml  build-bsh-tests.yaml  build-docker.yaml  build-libelf-native.yaml  build-libheap-native.yaml  build-libromfs-native.yaml  build-tinyprintf-native.yaml  buld-libheap-native.yaml
boot/: CMakeLists.txt  README.md  boot.c  bootinfo.c  bootinfo.h  bootloader.ld  string.c  string.h
cmake/platform/rp2040/: Init.cmake
emulator/: Dockerfile  README.md
include/: errno.h  service.h  term.h  types.h  vfs.h
include/l4/: bootinfo.h  errors.h  fpage.h  ipc.h  kip.h  schedule.h  space.h  syscalls.h  thread.h  time.h  utcb.h
kern/: CMakeLists.txt  debug.c  debug.h  hardware.h  interrupts.c  ipc.c  kalarm.c  kip.s  main.c  memory.c  nvic.c  pico_ram.ld  platform.c  platform.h  schedule.c  semihosting.c  semihosting.h  softirq.c  start.s  string.c  syscall.c  systhread.c  systick.c  thread.c  vector.c  vector.s  version.ld
kern/include/kern/: debug.h  hardware.h  interrupts.h  kalarm.h  memory.h  nvic.h  platform.h  semihosting.h  softirq.h  string.h  syscall.h  systhread.h  systick.h  thread.h
kern/platform/rp2040/: CMakeLists.txt  pico_flash.ld  start.s
kern/ssp/: CMakeLists.txt  ssp.c
kern/syscall/: ipc.c  schedule.c  space_control.c  thread_control.c  unmap.c
lib/: CMakeLists.txt
lib/buddy/: CMakeLists.txt  README.md  buddy.c  linked_list_alloc.c
lib/buddy/include/: libbuddy.h  linked_list_alloc.h
lib/elf/: .gitignore  CMakeLists.txt  elf-sniffer.py  elf.c
lib/elf/demos/: CMakeLists.txt  linux.c
lib/elf/include/: libelf.h
lib/heap/: CMakeLists.txt  README.md  test.c
lib/heap/include/: heap.inc
lib/l4/: CMakeLists.txt  bootinfo.c  ipc.c  schedule.c  space.c  thread.c  utcb.c
lib/romfs/: CMakeLists.txt  README.md  romfs.c
lib/romfs/demos/: CMakeLists.txt  romfs-list.c
lib/romfs/include/: romfs.h
lib/rp2040_utils/: CMakeLists.txt  gpio.c  resets.c
lib/rp2040_utils/include/rp2040/: bus_fabric.h  gpio.h  resets.h
lib/semihosting/: CMakeLists.txt  semihosting.c
lib/semihosting/include/: semihosting.h
lib/string/: CMakeLists.txt  string.c
lib/string/include/: string.h
lib/tinyprintf/: CMakeLists.txt  tinyprintf.c
lib/vfs/: CMakeLists.txt  vfs-client.c
lib/vfs/include/: vfs.h
lib/vfs/include/vfs/: client.h
root/: CMakeLists.txt  config.c  config.h  memory.c  romfs_server.c  root.c  root.ld  root.ver  variables.h
root/include/: root.h
usr/: CMakeLists.txt  user.ld  version.ld
usr/bsh/: CMakeLists.txt  bsh.c  builtins.c  builtins.h  cmd.c  cmd.h  data.s  fileio.h  parser.c  parser.h  variables.h
usr/bsh/tests/: CMakeLists.txt  parser_driver.c
usr/bsh/tests/parser_tests/: basic_command.txt  incomplete_escape_sequence.txt  parser_tests
usr/pl011/: CMakeLists.txt  README.md  data.s  pl011.c
usr/root/: CMakeLists.txt  README.md  bus_fabric.h  clocks.c  clocks.h  config.c  data.s  exec.c  exec.h  memory.c  memory.h  resets.c  romfs_server.c  root.c  service.c  variables.h
usr/root/include/: root.h
usr/root/include/root/: service.h
usr/semihosting_term/: CMakeLists.txt  shterm.c
usr/shterm/: CMakeLists.txt  shterm.c
